# kuka_record_and_play

./: CMakeLists.txt  README.md  kuka_record_and_play.kdev4  package.xml
src/: play.cpp  record.cpp
