<?xml version="1.0"?>
<package>
  <name>kuka_record_and_play</name>
  <version>0.0.0</version>
  <description>The kuka_record_and_play package</description>

  <maintainer email="josemanuelbonilla@gmail.com">Manuel Bonilla</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lwr_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>lwr_controllers</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
 
  </export>
</package>